--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Colours
 $black             : rgb(0, 0, 0);
-$black-overlay     : rgba(0, 0, 0, 0.6);
+$black-overlay     : rgba(0, 0, 0, 0.7);
 $white             : rgb(255, 255, 255);
 $yellow            : rgb(248, 226, 92);
 $dark-turquoise    : rgb(108, 207, 151);
